0192eb95-ec3a-7aad-b90a-8b737cfa1b9a

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <div class="container">
+        <div class="banner">
+            <img src="https://s3.eu-central-2.wasabisys.com/gems-images/0192eb95-49ee-7aad-b90a-698741c5500c.jpg" alt="Crypto Blog Banner">
+        </div>
         <header>
             <h1>Crypto Blog</h1>
             <button id="newPostBtn" class="button">New Post</button>
